# cmfas

./: .gitignore  MANIFEST.in  README.md  __init__.py  app.py  check_schema.py  clear_database.py  create_admin.py  create_admin_direct.py  create_admin_simple.py  data_processing.py  db_health_check.py  dummy_auth.py  health_check.py  import_data.py  import_materials.py  import_materials_batch.py  import_prescriptions.py  import_prescriptions_batch.py  init_db.py  knowledge_graph.py  language.py  main.py  migrate_db.py  ml_models.py  models.py  pyproject.toml  requirements.txt  reset_db.py  routes.py  run_streamlit.bat  run_streamlit.py  setup.cfg  setup.py  streamlit_app.py  streamlit_app_flat.py  streamlit_config.py  streamlit_health_check.py  streamlit_minimal.py  translations.py  (+1 more)
.streamlit/: config.toml
cmfas/: __init__.py  fallback_app.py  streamlit_app.py
data/: medicinal_materials.csv  prescriptions.csv
instance/: chinese_medicine.db
static/css/: style.css
static/js/: chart-theme.js  charts.js  knowledge_graph.js  navigation.js  prescription.js  translations.js
templates/: data_import.html  formula_optimization.html  index.html  index_translated.html  knowledge_graph.html  layout.html  layout_base.html  login.html  material_stats.html  navbar.html  prescription_entry.html  prescription_search.html  profile.html  property_distribution.html  province_stats.html  register.html  request_password_reset.html  test_auth.html  top_prescriptions.html
