[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmfas-app"
version = "0.1.0"
description = "Chinese Medicine Formula Analysis System"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.24.0",
    "pandas>=1.5.0",
    "plotly>=5.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.5",
    "chinese-converter>=1.0.2",
    "numpy>=1.24.0",
    "email-validator>=2.0.0",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.0.0",
    "gunicorn>=21.0.0",
    "jieba>=0.42.1",
    "matplotlib>=3.7.0",
    "networkx>=3.0.0",
    "scikit-learn>=1.0.0",
    "werkzeug>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.setuptools]
packages = []

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
